<resources>
    <string name="app_name">ButanoGas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="street">Rua</string>
    <string name="houseNumber">Número</string>
    <string name="district">Bairro</string>
    <string name="zipCode">CEP</string>
    <string name="btnAdd">Adicionar</string>
    <string name="btnCreate">Criar Pedido</string>
    <string name="edit">Editar</string>
    <string name="exclude">Excluir</string>

    <string name="order">Criar Pedido</string>
    <string name="address">Adicionar Endereço</string>
    <string name="historyOrder">Histórico de Pedidos</string>

    <string name="clientName">Nome</string>
    <string name="phone">Telefone</string>
    <string name="totalPrice">Valor Total</string>

    <string name="typeOfPayment">Tipo de Pagamento</string>
    <string name="cardNumber">Número do Cartão</string>
    <string name="cardData">Validade Cartão</string>
    <string name="securityCode">Código de Segurança</string>

    <string name="menu_home">Início</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>