<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_butan"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_butan"
            android:title="@string/order" />
        <item
            android:id="@+id/nav_addAddress"
            android:icon="@drawable/ic_butan"
            android:title="@string/address" />
        <item
            android:id="@+id/impl"
            android:icon="@drawable/ic_butan"
            android:title="@string/historyOrder" />

    </group>
</menu>